--- a/src/app/components/people/people.component.html
+++ b/src/app/components/people/people.component.html
@@ -1,1 +1,27 @@
-<p>people works!</p>
+<div class="clr-row">
+</div>
+<clr-datagrid>
+
+  <clr-dg-column>Name</clr-dg-column>
+  <clr-dg-column>Gender</clr-dg-column>
+  <clr-dg-column>Height</clr-dg-column>
+  <clr-dg-column>Mass</clr-dg-column>
+  <clr-dg-column>HomeWorld</clr-dg-column>
+  <clr-dg-column>Action</clr-dg-column>
+
+  <clr-dg-placeholder>We couldn't find any person!</clr-dg-placeholder>
+
+  <clr-dg-row *ngFor="let person of people | async">
+    <clr-dg-cell>{{person.name}}</clr-dg-cell>
+    <clr-dg-cell>{{person.gender}}</clr-dg-cell>
+    <clr-dg-cell>{{person.height}}</clr-dg-cell>
+    <clr-dg-cell>{{person.mass}}</clr-dg-cell>
+    <clr-dg-cell>{{person.homeworld}}</clr-dg-cell>
+    <clr-dg-cell>
+      <a class="btn btn-outline btn-sm" [routerLink]="['person']" [queryParams]="{ name: person.name }">View</a>
+    </clr-dg-cell>
+
+  </clr-dg-row>
+  <clr-dg-footer>
+  </clr-dg-footer>
+</clr-datagrid>
