--- a/src/app/components/people/people.component.html
+++ b/src/app/components/people/people.component.html
@@ -6,6 +6,19 @@
   </ul>
 </nav>
 <div class="clr-row">
+  <div class="clr-col-6">
+  </div>
+  <div class="clr-col-4">
+    <form clrForm (ngSubmit)="onSearch()" >
+      <div class="clr-row">
+        <input clrInput placeholder="Search a Person's Name" name="input" [(ngModel)]="searchName"/>
+        <button class="btn btn-outline btn-sm" type="ngSubmit">Search</button>
+      </div>
+    </form>
+  </div>
+  <div class="clr-col-2">
+    <button class="btn btn-outline btn-sm" >Next Page</button>
+  </div>
 </div>
 <clr-datagrid>
   <clr-dg-column>Name</clr-dg-column>
