Implement next page and previous page functionality

--- a/src/app/components/people/people.component.html
+++ b/src/app/components/people/people.component.html
@@ -39,5 +39,10 @@
     </clr-dg-cell>
   </clr-dg-row>
   <clr-dg-footer>
+    <!--<clr-dg-pagination #pagination [clrDgTotalItems]="82">
+      {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}} of {{ pagination.totalItems }} People
+    </clr-dg-pagination>-->
+    <button (click)="previousPage()" class="btn btn btn-info btn-sm float-right">Previous</button>
+    <button (click)="nextPage()" class="btn btn btn-info btn-sm float-left">Next</button>
   </clr-dg-footer>
 </clr-datagrid>
