Fixed SonarLint warning

--- a/src/app/components/people/people.component.html
+++ b/src/app/components/people/people.component.html
@@ -12,7 +12,7 @@
     <form clrForm (ngSubmit)="onSearch()" >
       <div class="clr-row">
         <input clrInput placeholder="Search a Person's Name" name="input" [(ngModel)]="searchName"/>
-        <button class="btn btn-outline btn-sm" type="ngSubmit">Search</button>
+        <button class="btn btn-outline btn-sm" type="submit">Search</button>
       </div>
     </form>
   </div>
