Add avatar images to assets and use them in PersonComponent view

--- a/src/app/components/person/person.component.html
+++ b/src/app/components/person/person.component.html
@@ -11,7 +11,7 @@
       <h3 class="card-header">{{(person | async)?.name}}</h3>
       <div class="card-block">
         <div class="card-media-block">
-          <img src=".." class="card-media-image">
+          <img src="assets/images/avatar-icon.webp" class="card-media-image">
           <div class="card-media-description">
             <span class="card-media-title">Gender: {{(person | async)?.gender}}</span>
             <span class="card-media-text">Mass: {{(person | async)?.mass}}</span>
